<resources>
    <string name="app_name">Portal</string>
    <string name="title_activity_main">Portal</string>
    <string name="title_activity_login_authorization">LoginAuthorization</string>

    <string name="toolbar_main_notification">Notification</string>
    <string name="toolbar_main_news">News</string>

    <string name="main_tab_schedule">Schedules</string>
    <string name="main_tab_Resource">Resources</string>
    <string name="main_tab_Other">Others</string>
    <string name="holidayText">Happy Holiday</string>

    <string name="shared_preferences">login_preferences</string>
    <string name="login_cookie_pref">Cookie</string>
    <string name="login_condition_pref">condition</string>
    <string name="login_data_given_pref">given</string>
    <string name="login_password_pref">Password</string>
    <string name="login_username_pref">Username</string>

    <string name="indicator_firstrun_pref">firstrun</string>

    <string name="login_button">Login</string>
    <string name="login_email_ending">\@binus.ac.id</string>
    <string name="login_loading">Signing you in</string>
    <string name="login_loading_info">Taking too long? \nYou have a slow connection, press back</string>
    <string name="logout_loading">Signing you out</string>

    <string name="request_schedule">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/learning/classschedule</string>
    <string name="request_finance">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/financial/statusocs/</string>
    <string name="request_notification">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/profile/getNotifications/2</string>
    <string name="request_notification_data">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/profile/getNotifications/0</string>
    <string name="request_student_info">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/init/indexpage</string>
    <string name="request_news">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/general/newsevents/</string>
    <string name="request_dashboard">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/init/dashboard</string>
    <string name="request_photo">https://newbinusmaya.binus.ac.id/services/ci/index.php/general/getPhoto</string>
    <string name="request_terms">https://newbinusmaya.binus.ac.id/services/ci/index.php/scoring/ViewGrade/getPeriodByBinusianId</string>
    <string name="request_grades">https://newbinusmaya.binus.ac.id/services/ci/index.php/scoring/ViewGrade/getStudentScore/</string>
    <string name="request_exam">https://newbinusmaya.binus.ac.id/services/ci/index.php/exam/Schedule/getOwnScheduleStudent</string>
    <string name="request_course">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/init/getCoursesBySTRMAndAcad/</string>
    <string name="request_current_terms">https://newbinusmaya.binus.ac.id/services/ci/index.php/general/getCurrentPeriod</string>

    //link to request data from Artificial Intelligence subject
    <string name="request_people">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/classes/people/**010548/1510/11160**</string>
    <string name="request_attendance">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/learning/attendanceInformation</string>
    <string name="request_resources">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/classes/resources/</string>
    <string name="request_textbook">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/classes/getTextbook/COMP6065/010548/1510/LEC/11160</string>
    <string name="request_learning_outcome">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/classes/getLearningOutcomes/COMP6065/010548/1510/LEC/11160</string>
    <string name="request_assignment_alone">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/classes/assignmentType/CHAR6015/010614/1510/LEC/10210/01</string>
    <string name="request_assignment_group">https://newbinusmaya.binus.ac.id/services/ci/index.php/student/classes/assignmentType/CHAR6015/010614/1510/LEC/10210/02</string>
    <string name="request_assigments_download">https://newbinusmaya.binus.ac.id/useruploads/</string>

    <string name="resource_photo">acc_photo</string>
    <string name="resource_account_name">account_name</string>
    <string name="resource_major">major</string>
    <string name="resource_gpa">gpa</string>
    <string name="resource_small_photo">small_photo</string>
    <string name="resource_terms">terms</string>
    <string name="resource_scores">grades</string>
    <string name="resource_scores_new">grades_new</string>
    <string name="resource_update_count">counter</string>

    <string name="account_name_placeholder">JONATHAN DOE</string>
    <string name="major_placeholder">Biomedical Engineering</string>
    <string name="last_update_placeholder">Last updated: 2012&#8211;21&#8211;12 12:12</string>
    <string name="gpa_placeholder">4.0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">hello</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_logout">LogoutActivity</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_info">Info</string>
    <string name="action_webapp">View in web-app</string>
    <string name="action_sched_webapp">View schedule in web-app</string>

    <string name="photo_downloaded">isphotodownload</string>
    <string name="last_update_pref">last_updated</string>

    <string name="menu_known_bugs">Known Bugs</string>
    <string name="menu_grades">Grades</string>
    <string name="menu_finance">Finance</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_signout">Sign Out</string>

    <string name="setting_photo">photo_setting</string>
    <string name="setting_gpa">gpa_setting</string>
    <string name="setting_auto_refresh">auto_refresh_setting</string>

    <string name="is_refreshing_journal_pref">isRefreshing</string>
    <string name="is_no_session">isNoSession</string>

    <string name="title_activity_finance">FinanceActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_grades">GradesActivity</string>
    <string name="title_activity_finance_webapp">FinanceWebappActivity</string>
    <string name="action_settings">Settings</string>

    <string name="info_what">What is this ?</string>
    <string name="info_what_description">Due to some confusion on who made Portal and concerns about it\'s safety, RESOURCES tab will be temporarily replaced with this INFO tab until it\'s ready.</string>
    <string name="info_official">Is Portal official ?</string>
    <string name="info_official_tldr">No, Portal is a third party app</string>
    <string name="info_official_description">We have explicitly written in the description that Portal is being built INDEPENDENTLY from Binus and that it is a THIRD PARTY app. It is not an official mobile app created by Binus University.</string>
    <string name="info_safe">Is Portal safe ?</string>
    <string name="info_safe_tldr">Yes, Portal is safe</string>
    <string name="info_safe_description">We understand this question, you don\'t know who we are, and why we make Portal, we\'ll be concerned too if we were to be presented to an unofficial app build by an unknown developer, just like Portal. So we made this INFO tab to explain.\n\nTo prove that your private data is safe, and to open the development to everyone, we have published our source code into GitHub, because of this, do not install/update Portal from sources other than the Play store. \n\nLink: https://github.com/directdevmain/portal</string>
    <string name="info_who">Who made Portal ?</string>
    <string name="info_who_description">We are just like any of you who are using Portal, we use it ourselves, we are active students of Binus University. We are not some hacker group that is trying to release financial data and GPA of every Binus students that we could find just because we believe in transparency. \n\nPortal will not send any of your private data away from your phone.</string>
    <string name="info_who_tldr">Students</string>
    <string name="info_why">Why made Portal ?</string>
    <string name="info_why_description">We find it a bit impractical to have your university data available 24/7 online, but can only be easily accessed through big screens and decent connection, which is something that is hard to get on campus, this leads us to use notes, screenshots and other static means of capturing information to make those online data easily accessible. This, coupled with our believe that CS students should focus more on experiment and building practical software, we decided to build Portal. \n\nWhy build Portal rather than other more serious applications? Because we have zero experience in real mobile and software development, Portal is easily the most practical and impactful thing we can currently build.</string>
    <string name="finance_upocoming">UPCOMING</string>
    <string name="finance_passed">PASSED</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
