<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.andro.proto.bapp4.ui.main.MainActivity">

    <item
        android:id="@+id/toolbar_notification"
        android:icon="@drawable/ic_notification"
        android:orderInCategory="100"
        android:title="@string/toolbar_main_notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_news"
        android:icon="@drawable/ic_news"
        android:title="@string/toolbar_main_news"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_schedule_webapp"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:title="@string/action_sched_webapp"
        app:showAsAction="collapseActionView" />
</menu>
