<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:background="@color/primary">
    <ImageView
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/welcome"
        android:scaleType="fitCenter"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:textColorHint="@color/inactive_white"
        android:paddingTop="30dp">
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailLogin"
            android:hint="@string/login_username_pref"
            android:layout_marginTop="35dp"
            android:textColor="@color/white"
            android:imeOptions="actionNext"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:paddingTop="51dp"
        android:textSize="18sp"
        android:text="@string/login_email_ending"
        android:textColor="@color/white"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_input_username"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/inactive_white">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordLogin"
            android:layout_marginTop="24dp"
            android:hint="@string/login_password_pref"
            android:textColor="@color/white" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login_button"
        android:id="@+id/loginbutton"
        android:layout_below="@+id/login_input_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:background="@color/accent"
        android:enabled="true"/>
    <ImageView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bimay" />

</RelativeLayout>
