<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_default">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_default">

        <RelativeLayout
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/primary"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <View
                android:layout_width="360dp"
                android:layout_height="110dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/profile_background" />

            <TextView
                android:id="@+id/last_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:text="@string/last_update_placeholder"
                android:textColor="@color/inactive_white"
                android:textSize="12sp" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="@color/white"
                app:civ_border_width="0dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/account_info"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/photo"
            android:background="@color/accent">

            <TextView
                android:id="@+id/account_name"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:singleLine="true"
                android:text="@string/account_name_placeholder"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/major"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:layout_below="@id/account_name"
                android:paddingStart="16dp"
                android:singleLine="true"
                android:text="@string/major_placeholder"
                android:textColor="@color/white"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/gpa_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/gpa_placeholder"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/account_info"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/open_known_bugs"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_bug_report_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingStart="72dp"
                    android:text="@string/menu_known_bugs"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_light" />

            <RelativeLayout
                android:id="@+id/open_grades"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_grades" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingStart="72dp"
                    android:text="@string/menu_grades"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/open_finance"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/finance" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingStart="72dp"
                    android:text="@string/menu_finance"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/open_forum"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_forum" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingStart="72dp"
                    android:text="@string/menu_forum"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_light" />

            <RelativeLayout
                android:id="@+id/open_settings"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingStart="72dp"
                    android:text="@string/menu_settings"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/open_logout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingStart="72dp"
                    android:text="@string/menu_signout"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>

